--- a/BitcoinPOS/frmAbout.resx
+++ b/BitcoinPOS/frmAbout.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="donateQR" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\donateQR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lblCopyright.Text" xml:space="preserve">
+    <value>Copyright Antony Bailey 2013
+
+This software is free software. In this I mean that I take no payment in return for its development or for the use of this software.
+
+This does NOT prevent any other persons who have modified this software to charge for their time or knowledge.</value>
   </data>
-  <data name="MDIParent_timUpdateBalance_Tick_Balance___" xml:space="preserve">
-    <value>Balance : </value>
+  <data name="lblIncluded.Text" xml:space="preserve">
+    <value>This software contains code from other developers. They are subject to their own licences and should be reviewed.
+
+- Microsoft Entity Framework
+- BouncyCastle Crypto
+- log4net
+
+This list is not gauranteed to be complete and any credits not included are purely accidental and not meant to claim ownership of any included code.</value>
   </data>
 </root>
